--- a/sass/master.sass
+++ b/sass/master.sass
@@ -10,9 +10,19 @@
 
 .content
   width: 100%
-  align-items: center
+  text-align: center
 
 .section
   height: 100vh
   width: 50%
   margin: 0 auto
+
+.img-circle
+  margin-top: 10%
+  width: 150px
+  height: 150px
+  border-radius: 50%
+
+.main-content
+  font-size: 2vw
+  margin-top: 10%
