--- a/sass/fancytext.sass
+++ b/sass/fancytext.sass
@@ -1,5 +1,6 @@
 $main: #EBE8E1
 $second: #333
+//#333
 $back: #ee9ca7
 $time: 1000ms
 
@@ -7,6 +8,7 @@ body
   color: $second
   font-family: 'Noway'
   font-weight: 100
+  background: white
 
 .welcome-text
   font-size: 4vw
