--- a/css/fancytext.css
+++ b/css/fancytext.css
@@ -1,7 +1,8 @@
 body {
   color: #333;
   font-family: "Noway";
-  font-weight: 100; }
+  font-weight: 100;
+  background: white; }
 
 .welcome-text {
   font-size: 4vw;
