added education and some contact icons

--- a/sass/master.sass
+++ b/sass/master.sass
@@ -3,6 +3,7 @@
 @import 'fancytext.sass'
 @import 'arrow-down.sass'
 @import 'contact.sass'
+@import 'education.sass'
 
 @font-face
   font-family: Noway
