--- a/css/contact.css
+++ b/css/contact.css
@@ -11,7 +11,7 @@ a {
   padding-top: 10px;
   display: inline-block;
   margin: 10% auto;
-  width: 150px; }
+  width: 300px; }
 
 .c-icon {
   width: 36px;
@@ -26,7 +26,13 @@ a {
   color: #dd4b39; }
 
 .c-link--instagram:hover {
-  color: #833ab4; }
+  color: #FEC053; }
+
+.c-link--codepen:hover {
+  color: #28282B; }
+
+.c-link--github:hover {
+  color: #800080; }
 
 .c-link--twitter:hover::after {
   background: #55acee; }
@@ -35,7 +41,13 @@ a {
   background: #dd4b39; }
 
 .c-link--instagram:hover::after {
-  background: #833ab4; }
+  background: #FEC053; }
+
+.c-link--codepen:hover::after {
+  background: #28282B; }
+
+.c-link--github:hover::after {
+  background: #800080; }
 
 .c-link {
   position: relative;
@@ -51,17 +63,17 @@ a {
   left: 50%;
   transform: translate(-50%, -10px);
   opacity: 0;
-  transition: 0.2s; }
+  transition: 0.1s; }
 
 .c-tooltip::before {
   content: "";
-  bottom: calc(100% + 17px);
+  bottom: calc(100% + 27px);
   border: solid 5px transparent;
   border-top-color: currentColor; }
 
 .c-tooltip::after {
   content: attr(aria-label);
-  bottom: calc(100% + 25px);
+  bottom: calc(100% + 35px);
   padding: 0.61em 0.93em;
   font-size: 0.875rem;
   color: white;
