--- a/css/master.css
+++ b/css/master.css
@@ -102,7 +102,7 @@ a {
   padding-top: 10px;
   display: inline-block;
   margin: 10% auto;
-  width: 150px; }
+  width: 300px; }
 
 .c-icon {
   width: 36px;
@@ -117,7 +117,13 @@ a {
   color: #dd4b39; }
 
 .c-link--instagram:hover {
-  color: #833ab4; }
+  color: #FEC053; }
+
+.c-link--codepen:hover {
+  color: #28282B; }
+
+.c-link--github:hover {
+  color: #800080; }
 
 .c-link--twitter:hover::after {
   background: #55acee; }
@@ -126,7 +132,13 @@ a {
   background: #dd4b39; }
 
 .c-link--instagram:hover::after {
-  background: #833ab4; }
+  background: #FEC053; }
+
+.c-link--codepen:hover::after {
+  background: #28282B; }
+
+.c-link--github:hover::after {
+  background: #800080; }
 
 .c-link {
   position: relative;
@@ -142,17 +154,17 @@ a {
   left: 50%;
   transform: translate(-50%, -10px);
   opacity: 0;
-  transition: 0.2s; }
+  transition: 0.1s; }
 
 .c-tooltip::before {
   content: "";
-  bottom: calc(100% + 17px);
+  bottom: calc(100% + 27px);
   border: solid 5px transparent;
   border-top-color: currentColor; }
 
 .c-tooltip::after {
   content: attr(aria-label);
-  bottom: calc(100% + 25px);
+  bottom: calc(100% + 35px);
   padding: 0.61em 0.93em;
   font-size: 0.875rem;
   color: white;
@@ -162,6 +174,112 @@ a {
 .c-tooltip:hover::after {
   opacity: 1;
   transform: translate(-50%); }
+
+body {
+  background-color: white; }
+
+.line {
+  position: absolute;
+  margin-top: 5vh;
+  width: 2px;
+  height: 90vh;
+  left: calc(50vw - 1px);
+  background-color: #333; }
+
+.section-content {
+  color: white; }
+  .section-content .heading {
+    font-size: 17pt;
+    padding-top: 20px;
+    padding-left: 20px; }
+  .section-content .text {
+    font-size: 12pt;
+    padding-left: 20px;
+    padding-top: 10px; }
+
+.first-section {
+  position: absolute;
+  margin-top: 100px;
+  left: calc(50vw - 470px);
+  width: 400px;
+  height: 150px;
+  background-color: #333; }
+  .first-section .triangle {
+    position: absolute;
+    margin-left: 400px;
+    margin-top: -50px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 15px 0 15px 30px;
+    border-color: transparent transparent transparent #333; }
+  .first-section .circle {
+    position: absolute;
+    border-radius: 50%;
+    margin-left: 445px;
+    margin-top: 55px;
+    width: 50px;
+    height: 50px;
+    background-color: #333; }
+  .first-section .icon {
+    margin-top: 17px;
+    margin-left: 15px; }
+
+.second-section {
+  position: absolute;
+  margin-top: 300px;
+  left: calc(50vw + 70px);
+  width: 400px;
+  height: 150px;
+  background-color: #333; }
+  .second-section .triangle {
+    position: absolute;
+    margin-left: -30px;
+    margin-top: -50px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 15px 30px 15px 0;
+    border-color: transparent #333 transparent transparent; }
+  .second-section .circle {
+    position: absolute;
+    border-radius: 50%;
+    margin-left: -95px;
+    margin-top: 55px;
+    width: 50px;
+    height: 50px;
+    background-color: #333; }
+  .second-section .icon {
+    margin-top: 17px;
+    margin-left: 15px; }
+
+.third-section {
+  position: absolute;
+  margin-top: 500px;
+  left: calc(50vw - 470px);
+  width: 400px;
+  height: 150px;
+  background-color: #333; }
+  .third-section .triangle {
+    position: absolute;
+    margin-left: 400px;
+    margin-top: -50px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 15px 0 15px 30px;
+    border-color: transparent transparent transparent #333; }
+  .third-section .circle {
+    position: absolute;
+    border-radius: 50%;
+    margin-left: 445px;
+    margin-top: 55px;
+    width: 50px;
+    height: 50px;
+    background-color: #333; }
+  .third-section i {
+    margin-top: 17px;
+    margin-left: 15px; }
 
 @font-face {
   font-family: Noway;
